# asynconf-2023

./: .dockerignore  Dockerfile  Justfile  README.md  Trunk.toml  data.json  index.html  schema.json  web-c6b89758ab451731.js  web-c6b89758ab451731_bg.wasm
crates/domain/: Cargo.toml
crates/domain/src/: bank.rs  boundary.rs  calculator.rs  lib.rs  vehicle.rs
crates/domain/src/vehicle/: config.rs  mod.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: main.rs
