[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
domain = { version = "*", path = "../domain" }
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
log = "0.4.20"
serde_json = "1.0.108"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"
